fix plex volsync config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,44 +1,44 @@
-#ENC[AES256_GCM,data:T/UVCTHgNBZqXcNNpYJyl4aGzNDu5dOU5wlx3zmGP6Ch+2L2BHOhfrrpKoftNwbixc6jjioh06kfIExdWvbjNEA=,iv:TWodZsPg0J68q+037W4Zs24Ktbjng43gzplTdIjbMLw=,tag:E6ZlisASzUZuEH30yHvF9g==,type:comment]
-#ENC[AES256_GCM,data:L1nWjsMqzdx6aJ0pqzC5miRdboDNkHs7mVnkghvbgouCFyjfHz51q/lAuiI=,iv:4sRkVQs89A+rWdQ7n9wZSozBYIns861wD0CDysBC3Fw=,tag:EC++/yTHMogkMf1vypmuQA==,type:comment]
-VIP: ENC[AES256_GCM,data:T5eZRvg+rRQP3IEbvA==,iv:u4hOucNReMlzJ3nJ3m2yBZxT3jWjlEFXKSTd0in+6Ko=,tag:52UG9jGhdIlotfO+BvkYvQ==,type:str]
-#ENC[AES256_GCM,data:9AATIvBO/uyosZfxOeDJlA1LyAoPaWyFwZ0G,iv:/SXlYSRSbgN/oPZ208PdnG+eaw73Z+fKGWkyN6a+WVQ=,tag:rmiOjEfp1h+9WngePXGS1w==,type:comment]
-#ENC[AES256_GCM,data:HXWAPjdoSTe4jVer3XQvE8WCM6m7zzVSuTYDmqr6W/bpJ2t0UTkYjJVhhz6Xtd7JBSs1K/OEwm5He9aynqJmM8Fs9Yi4smYNJJAFtD7JUERuOI5FOYjE72E=,iv:P2bzTyNBmp2imUmMOQtP2zrmpQacJJzNB0ULrNA+hv0=,tag:sOF9ZM8E2GhOviPeugAlSg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:jc6iS2RUZWXvGT6DFKM=,iv:iwEMms5zpeVqGXwXPn5gPa32yV8FwuTISeyY4gfSfSg=,tag:0EkhnSVA7EznL++9GvmLJw==,type:str]
-#ENC[AES256_GCM,data:JJP4fBNyTZaTibELjGynep6JvnFhEZeBV4WAdFNkpz/IFw==,iv:ZXmfdSMmFbgWVp6QMjtQ+LlCe/PeDGkrDkXZG6Bu6dQ=,tag:lTEkSEDfrKCmNWMNQYuC4Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:Jt5Y1Q2xcbQvFt9gZg==,iv:qYkf+4s75LW9eP6newrX2Is9Yj6gWeuuRtpbp013r0g=,tag:9hRXcRQprPe9H+FqI23L+w==,type:str]
-#ENC[AES256_GCM,data:EPOdUJNSqdt8l46gDX45xhNMfjVW6hz55d8z7kBGA1iyWrpBExIK26sgKZ67wak=,iv:VsZWcF6XxSspSuZr6a3Qi3J3iL12pmmTtKVoPAwqol0=,tag:cV0kvBmM8biQ9mKwcxoKLw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:Rc1pq+ooIRuvs1dvcrWCy4fbWDs/476qXQi6e10Q7A==,iv:IrG+kogq/tS5rfiX3ZmQN8ihGvlhrJHyB1S7gG96dso=,tag:fpazUCIpvlp8ngCn7Bxhfw==,type:str]
-#ENC[AES256_GCM,data:QO1kT3j9nKtZoW8l8R4kI8RGFeVFSs4WufYwcai0BYlrHjXzc09pQbvKFGnHkYB0P29o1WK1OnXJa2LJwZiuMIwEyxdQxUmr8WDOKxjWVWn9Zg==,iv:kGzVDatgb53IyVU1bQYcJNhIa5V3RorHQPAj96cQFcs=,tag:Po3JnfM3aMZbAvrszq4DUQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:Fz3LP8tw40gVLyAhvDH+,iv:Bw/c0xuOeUlLREQfRXRMyyPDVvSxzwf0a7RNn4RRW/8=,tag:ApWIaKcs7Zo9OkWwlMCBpw==,type:str]
-#ENC[AES256_GCM,data:4/XYVdLM6d6wx/hCfa0Unot2rglDxrh3u93caMJLf6RG,iv:UFt5IUaIRlSC0wIx6M0fVlyMFM//iDocJ56+JAjcR3I=,tag:ofEXdiy5b5vmSBvnSZwcgA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:ZD5BWlucurUQon0ee/Df,iv:n3w8A2nv2wkx/WGOSno/84r2s9wKZEcpi0AUK3hOx/k=,tag:m1ka4LdKHxkb2imeJvu3Tw==,type:str]
-#ENC[AES256_GCM,data:PsK7LV8CMtlpjl1OTj3VsvkrH/OxgwB9bNOaQNuq8qkd+eex037JwH17XlHO8y2jRbJJ90XozlxkjUsRjolbCi9Cpf+oBJ8dr9HJKKMrqys=,iv:NO2PsXGfHaqNxc46h856H0K5+/1lZB7Rf5Z4dHd05T4=,tag:v+fI/Gz/XnKq2HeKFSWJVw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:v9vEfpWN/zJorlna8jtF,iv:Yqm9PqEWLRJ9WNySe60U5WTYT9gX6zZFNiGUeeSAHko=,tag:NVqyKZJB2BVCVuCvi13rqg==,type:str]
-#ENC[AES256_GCM,data:u7i7+Qm9yP8aVbYvP23Yn8adWHFXr+PemQnnPAwn8Adih78rYT+uiF1kaK0ZecC2AoPyH80mc0F1TdBRGSOXGW3xTysa5BYtqxJjdsRaIFIwapoFPbfY,iv:ZLezJ9bQhuqrkhXvWpENVjxd2NYFSSwyknfyF18vTJg=,tag:jszf9QIjBu1Kl2f04kMBuw==,type:comment]
-#ENC[AES256_GCM,data:tMmXcGz9UdGqqOZktRJp/gMJUe2qjztkRzlLD6kJmJVkCtAshqjmldqh69Do2XB/Lx0j8FL+4TNtJGiSf0jEBshdcFjecib/ZkUSgZSxeh/K2boobN8GHxLOAaBK+n2vcxfFw5U4wKmUgitTAwWZ2Ru4DMrHMGMHhc0nuA==,iv:1Cy/goM9fI7NEZm9ipeMOVNrNZuZ3YT9DpHod474cBA=,tag:mQO6IPBnMpVEJk1+9+TiqQ==,type:comment]
-#ENC[AES256_GCM,data:jEx6Jq5iEuVeekLzSUbXvYuUOkosU36SQP8T2n2TvfkKmgpeQkGSP96VKmLs/QtvZ2acgrBiQ7/OXih7VtbrZYfHiX9JCwazHTn+LSJyLfM=,iv:7UP/ucxwBf7MGwI4HWemyzye0sJ50MzGSC1gwcKj41w=,tag:L5JKEFqRsGmu4NKUGwE31g==,type:comment]
-#ENC[AES256_GCM,data:kucC/tQoUEUGII9oG19JtgNqz42qhaR3vOQglB2x29xn3oUtCkPcCRePPeNvj/h8ZtfMiShB,iv:+AmQetVYArbE0ZHIpxCd5PqTjW3lqd0ojn2q1mddOSE=,tag:mlWNO6pkkBlwYuR8jHskBQ==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:MDKPYF0KfmaVAAja,iv:7QLF6jnCRY+oX9Z/tnpfG9MEs4oKah5b2Nbyw7N9LaI=,tag:mY3jXQ/onE3BYzUsuk9rgQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:PS4dhnWD+dRqo/Fqs013+fA=,iv:OoO9kw0Ib5jHdtg6kOZ0dg+ZvlELvrZJEdOFF6jjk/A=,tag:AcI1kbKDFcIc09skVdwqug==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:gMqC7Kgs2nmjEAOLwkOITTq5qisfEOBbQEQvhZ9XYFQ=,iv:9CxQ9KsqPzEQa5Yjtkb1mEf0e4iJVrys593Qt6EIxNQ=,tag:AWbUNfPFAN5aHJYoKo0jOw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:w1dOihNFTmpqvYZsgo0bRajsrNT+pxqWpt/MRpb0l++Quq9yaxczrw==,iv:I8+C3Ql/gtXYLS6VGthhKJYVQ7vegnMPz1CBGDT29UE=,tag:eKF8UphhQex864BS2tMtPQ==,type:str]
-#ENC[AES256_GCM,data:iI29Q+cIrUBXfflGCODac982srlbuep48742PGbNXOGD2Xnr3zCdpJEFB3YZP5D6TFrnujR88ek3b94rQ9ap1g==,iv:4B7sMdvRV0+cunVO2ydHI7CGHmlfASodTqzJ5x+0M7E=,tag:BJVo2q0OggeKaRL18OW2zw==,type:comment]
-#ENC[AES256_GCM,data:4gXPzfsEDihpHmuF0UZ77efxWoSShgB+MgPg+qn3+krSD/vazqI4IUbU5ykOU+h+4ZoQSVnHpAc=,iv:rh1Wc0/uJWpDrHIaZFuS8JUj3doyiaWyy35qDnwnv4g=,tag:axCc1JdZ6n5bQ2EzGF+f1Q==,type:comment]
-#ENC[AES256_GCM,data:CXha+EMu/rlKTV1R9XAM22t6/bgutAFYsA==,iv:9jhKhGr3jAv3SKBWgRpLBrIuRp+Df6Vslf7UU3nLSO4=,tag:WXRyPGpaTuUvziV48DdhVw==,type:comment]
-#ENC[AES256_GCM,data:fkpVV5hdmPdOjn6vxgJRB2I97utnuNjsctKLW8Kxijq94DQiJdkRSHr597E6sD2zc/M9RV5bV6l+8JvbSDFZEAeMRCdShX7b6JCiVLA=,iv:myS8LG0I28KiJZn5iM5F7hxksv+KW6cB/MIs+fEnjng=,tag:pzad8MTcRyi/kfV94tx8tg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:d44X8kkM++mu+Lz+CLKZvuBAB2RqymywO7BJrVVJicgzKks6ooRqrdT4keRqpnBg,iv:s7/YFL2QlfME8eOS3JaFxnsCV20t/3adBw/iDoTA3dk=,tag:XtEEOI3vHkcAosrOdH8eMA==,type:str]
-#ENC[AES256_GCM,data:JPngwc+t+Xuyj9Rzh789hxJ+3hNlwhP8z4lk14Rz0TwZlKA3lFUz/H9gurr72ekN6nNVO1Grz4nVprZNdUyMP/Wx+abe1qc=,iv:kAP2tmo/xpLBcfDPu6wxsU4HMBhYLzQCuR22rkHZZec=,tag:TgAcGU3JoAxqGI0pD48QpA==,type:comment]
-#ENC[AES256_GCM,data:/zWT7Zdc4MdMa8l9U8c38p7leYx/mRoBn8Ehr41kgBUPt18bpsZ8nwhneH8Y9pG4eacDjeJd,iv:Vg0ebflDMm1dzhaSx2OGlPP4/GiLxBcFs1J2ewPwr4k=,tag:WdckE4/G7JLt2NF73lPklQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:gCPFefxMBw==,iv:cBAV6/DjVTio99o3whAscY7pbj3O0a9mlhaDxWqY4H0=,tag:jTlt4sTMsdZhvQXULvPlKA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:cSskyBRirXndlKBBJKtTjGz72hU=,iv:4eeIrA07PwbDkBBg06Ms9cknzWz+dGh+nuA4/gK5a30=,tag:flLCFvVeL4Mapdf/6AYKMw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:zCkZhmQjR0/cJPo=,iv:UZcT8znkXA057n0kbow6uwkINX5JRsXqiZqDkVNNSvM=,tag:VgYB3QAjGezg/HsYSWJ/3g==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:JXVZ5yzDrRlb/HfPYTWy,iv:+9yoo3UnvpQCcCmStm2gn8PaJZghr72AY+w6N0DFFhg=,tag:TAuLzzdwbb1P09fchvQuKw==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:8YjX76Et5NB913Ly8Ul01xlqmYC1gZ7JHA==,iv:3xmSOwM+yRt5ox5D0w0bavf/23QmLCPJWb08cOA7yMU=,tag:x+ZZioW50jplawTt3qwq6Q==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:7AtwD0tOmd9RQSeoQmsCHaLlsKAS18xD,iv:rqizXUUDc2Ls5J1ZJyTRHLo2DGamBDdFNeLQkgBXxt8=,tag:yj5qeye8PLkhHBqSHwx5TQ==,type:str]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:FlOjMDsCy9z22R2Voi/xMyjj,iv:LAhZ54MP6efehOJ+k+4i7lP/oSsjTw64A/DklWceZCo=,tag:wyzb+a+gIJOtGpwu9E6bIQ==,type:str]
-#ENC[AES256_GCM,data:kjDYgIx3fN0MsIF4D4k=,iv:8kBoLKFsXpFsTOg37RX3zu3rH/lGIdc9d6XX/vnXlbs=,tag:KyIMsd5pEz08541wCzo+iQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:P9Pj3pByRpk+xrLqtg==,iv:lMon43K24NGK9eWub9oBETQ0VDGdI7+/qCP+9ahJR1U=,tag:H+5WBbGBvRdzPZHSqX0TUw==,type:str]
-SVCNET: ENC[AES256_GCM,data:6iEVirk/7gYlJo8Zkg==,iv:bHFQn/MRI/sDfH5o+Yf04pZ2j1EdRxRqJ9SGobPn9w8=,tag:iS222Li+CYyNj60pkC+/ew==,type:str]
+#ENC[AES256_GCM,data:RK7Tgzm6Lz1DKbZvXVwOZSn/v/CinXblJTIusb2vp8jYOwEy6c+4dBq1lrGCY532/b3cpgEG3debB6WelZ2zWPU=,iv:pnFHt1gV99MF58Pt6RkcQf7nYzzBBXVRbnVukQaPins=,tag:BHpXc3z1Iw6OFm2ce+ByJQ==,type:comment]
+#ENC[AES256_GCM,data:sVcAAOPpd3hrbs+ylL6fv4AsDODEM95/ZuQQu1WhYgpPFaMjuxqUlsqNUtw=,iv:JMdCiY2HfUo571JhDispOetA2SPELnla6r6UjLuzU1A=,tag:Tm9iKsziTlQQIk2CvUcYGw==,type:comment]
+VIP: ENC[AES256_GCM,data:ksDpvcDf8DvZb06Xug==,iv:tCS4buDuzqeItBM/LAaN8cN9K1NrdTMRM3qriM91g0o=,tag:Zjk87vcdD5gJt9n9S2Skig==,type:str]
+#ENC[AES256_GCM,data:ioYDfIElzrq0ECiucNrL3tTpF7pdjQIZjMuA,iv:6FFteP8oOCcb+AtZTtbH0BQhKHn+IwqJCkqbSHprJeQ=,tag:5npVEOZWnjFkbATFrkafuA==,type:comment]
+#ENC[AES256_GCM,data:NeFrsp3zZkJC9nAAkwqJmvIgHB3O4GaQqsN3PHQx+TrNsBh8TKwD9ArSnWkmZIqE7p+9arYdxprmnQK0y0TC5pyQLtQVbGfTGJ8GAKQL8GSRwJC57LdIh1k=,iv:J3LaPrQLaa+YhFeSI/LLehCiQ1I/xvm4MqDg+OI4G+0=,tag:yYZvqZLfyyKsno57YQDwiQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:HC3vxDnhdz1CDmRqC4w=,iv:gHtcOM1QFxRC/KrjEj4gbmyE6tsHJ1agpcp8mR/x2+c=,tag:UcQOzPlXeH6NTQqClUFEBQ==,type:str]
+#ENC[AES256_GCM,data:EQo6iIz/3qN6MZaz19niz9BuB72gD7OXuGQkMQJoxwgx5g==,iv:pK4lw/sluJT2Ch+7TkMmFab54lI3BdDf0UB5ETzHZWw=,tag:XU8ZpHAozgRcaDF4pk8q5g==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:1+oqJgbGPld6kpIqmA==,iv:Buyb4C+uSR5FOhtyvbrxegdq7tprQM0XednfhQbVvEs=,tag:p0pdaZapriPhoL9/wab1NQ==,type:str]
+#ENC[AES256_GCM,data:oYJ6WMZXC/Q8AW0Vt5i3c9U+CJzwsRFVCPh4PFJc0UGQQnsxikv/6SMemn8R8so=,iv:wo8Vw3c/Jkg7uE0MVpzW/L+PcY8PdLfZCYy7WUAA+ks=,tag:LjFRBycANH1uNjXO9RI5Aw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:SqvnBwA8Vo7ZIiHJckwKtFFeXsA8znZlvNslJKytuA==,iv:P1H6w7X9H+b0Nn7VLo6cmy7O2EFhvXyNtRWucdwxBdw=,tag:YB1SveHzURpkDoM4FLcgkw==,type:str]
+#ENC[AES256_GCM,data:Ij82MuUlCipkznvugXrJvTERIZPNFtSgrtIA4+TDJPP+md4ekORxxiTH/VUM8oLlVJFan9rIEt/uZGvKMi2Qtsjxn75OHfCHUucSSeoTfrvj3Q==,iv:vQk3PjTx47UCGB7UGlwEDNOD+5+XGgRkGIy3el5TVdI=,tag:tDwkr2srrc22mFRXib37xw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:IqBdT8ovTEAshdXOn3eG,iv:s4T1BBm7TPvLwGi0CGcKgzfAKE8nCFQPYN9Jvcsi4YU=,tag:4fbisfIZ+c+DZCVL0MgHjw==,type:str]
+#ENC[AES256_GCM,data:RqnvDNqLakRdoGdDKeZcCGIf1SxvnSOaL/a1XSyfVOzO,iv:QO/wbsRDh50Tl04Lz6NuKAP+3Um/lARneVBqCXCRlmY=,tag:JXg/wjCahB/hOiv3udiu+A==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:mhETgqiAIBGiVR1hJ57k,iv:5DvltNRXAK4Ftb8+BdM6NDmolLoyeV5l0LxBmVBTCzA=,tag:zDNDbck4zEG47YiOfIeOgw==,type:str]
+#ENC[AES256_GCM,data:QSR79MwNxwgAn36vrmgh7jqcuWpDCg8XnX13l/rp8fo7LzdtbLAOkumzvUHE9izeNZGU5UNKzAqyFkcswi1PAd4VjpEXcFiZkHNWyTXUHlQ=,iv:tcdKP3XrYZIH60stQlRDZDgLPRsdkLZTb0M1i04V5cA=,tag:9VP1mvdkGkIYy5/9sMHV/Q==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:VQ7rJWqQz0smuNxssq5B,iv:RXuT7eTY+Sy+Ef9aMSC+J22yaTpoLWLhuCF/E4/8gYw=,tag:ZhplChENVYuJt9eFxQTvRg==,type:str]
+#ENC[AES256_GCM,data:YmJIXXdoioeb/Oq/sawc1Fm9iEMyOnA5CYWDjWkzapvZOiEeTowKznmLYJqDbQXSVpKqUJPr+Y38DlFOzUaRLnjg+d9oGsg8XWMd1Bca51cZLuMMbwpr,iv:9foYBiOkRhDCO4LozGtadFwOGwgMGxgEhDpajB2HkhU=,tag:XOOqRr7S7uS8m9Ff3IkOeQ==,type:comment]
+#ENC[AES256_GCM,data:1Smnk10yBixWtJzdYeSOngnh8yUqwNTpFyeRwL7G0hXmM3TJxQyp4hIKNHJDD+MPj08a1qwwlKv9vqBH9fN1GW3zxoE17XZaodkenF0MQJwYa2VUQDs8t3SIXujEYWp0N3s3xEmxl2rb9p0q0rrTtavnXRzYHIupUzTmLA==,iv:hS5A8kjEzhUihRR0qn9Hx3D2yye+w7am4Tii2Doq7X4=,tag:JTHpxjrMvMsv+O1eVURmcQ==,type:comment]
+#ENC[AES256_GCM,data:lRqr6mnIt2ZtF0ZgxJUwZ/n7s32hK/5u2QF8QYSuIxPr1kfEybYBhiy/HEwrI419ME2KoLR9XIWk/oHyutK5nzzt7o3pS04wF4me86nvW3s=,iv:mvX/j7IJJv+DxiyV4HM9X4tntIrp5djAEPUPNopPHPI=,tag:sO6sWLV0awBq45MjQeZKPw==,type:comment]
+#ENC[AES256_GCM,data:LhRSxTYaaAsSBmib+zJ42FP56MY4S2bh/8vOl8xohJLGpsm/55eJ+Fnup7wqFoR0WgEGv20u,iv:YA6qWH7q/QL5TixRPD8ZjIFcOsB1uPzkj4ZuBcLyTLk=,tag:2ct0sEreED9QeKQ45wO1fw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:sBNXv47NzJqWasGs,iv:2SOAZsMUZz8y+ukRFsA5Jbp8zB2Bopue0+5+4tyU50s=,tag:GZAlvoeh0oQZVGMy/vfIPA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:T4mfpYA5mPdqxCcnFDHLTQ0=,iv:7LINPiZjHeCIgqv5xKTjagpzynkVmkCh0TCiaRwgDyo=,tag:zok5V7eZLyQ5RY03bGLPwQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:KY87NjVanI4iGwAI6WwTspAH0ucl3ZuUszWnCeKHUxo=,iv:sAR53FoL9AUPPB1MLJ3B5rpM1+zaj/r/F/HwsIT+r0E=,tag:SFXz4sIxdsfAcWnj8R9fVQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:im42JY7lLqBZp1/QbJqJVnfYcbi2STXqCOIs4EQJ/pkvwDxtFqZzNQ==,iv:jOULlOkshs0t94W/WEPymxi9ltc7SLKBmU87UZNWsKc=,tag:NA89zDoDU501V5OjX3w0cA==,type:str]
+#ENC[AES256_GCM,data:zJczK2yS9Jf/uJYYYAiDyMh1bnvizJMwrbkrYR/92o6fQhpD4asyjLiDEeWrnwHPPpwldg2WdXe+xUG9Z+nh2Q==,iv:+Y6y6bH3K5/JCUQf1TU9DWM6zIVlVEWYGdXQC14nzTY=,tag:yfmi7eU90hbC0i+5E5/XbQ==,type:comment]
+#ENC[AES256_GCM,data:zvlIgfXdWftXLjvGaL41nuKpwCiYKkgOQZolhDUp+rRoOHlRfvG6fpU87xzBSzRk97rdI0/wbPw=,iv:U34oOngl3PsmM9YNMcLmnqh/bYppFGbgm/popzRLHME=,tag:Jnb1M2reUy9yBgM9gfyvFA==,type:comment]
+#ENC[AES256_GCM,data:2k9JHhScuTkYJNuf/4AOBM5qcyEY+D+6Ow==,iv:f5TUA0lfw166VIJCpyfkmKmuImBZs12Vrn4+TlWz9+8=,tag:fsTVYY0pWbSJ/KM27ERRlA==,type:comment]
+#ENC[AES256_GCM,data:AZPfL+ZXFLadnqbxEcYeM2M/xkf1W5Yrwg9aIZ151/pOIvxdHVlqiloCFNCT/7v0nvkMEkdIJoGruVrMbY+ysvClnZZaqMuUWVG8MLQ=,iv:cBUMMaxlGoBspXnfoWaC1hLVU/CDUcmj6uIWLEVOsKQ=,tag:tOQWvlsB4ixjAKFgegmILA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:SIj3TRYKy6biGqjluz29G+VOEaQDsvS06onr8ZO/QRFlHW1dEpyORNJTb+sVGN4v,iv:+lnotwGxBKnS0eSotYDJDGsqo1BlgXLh1iJUGnUhUU8=,tag:2WmtJVyrwLLhpKGYqfZhLw==,type:str]
+#ENC[AES256_GCM,data:JCcz5GifhMRAEpQ4TdlbW87gGgpecGyUYPuj6ePtDLNRhI+2v2TDOfBwGisyo4HhiVZhsbNucSGAxJsnQvFaO2IbIQ3C2p8=,iv:WwKeV7O4bQd7AxSvgg/Q1T/XuK7iquFhlnFRcrH/2WQ=,tag:nUcpUU7EHq3/NWLYHFKVBg==,type:comment]
+#ENC[AES256_GCM,data:CRuMPCWa5YR0orM0InnFXxryZam5fADDfT6uufzm8EBylW9K2bCXDpu7jVleQfBjksTcD5R4,iv:gDtWfT4EDh9GbBIoO+RJgCFcS7OtBtFqj6ffe58CBMs=,tag:P1FjXQajyy6kHQOUrFIbDw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:qQ7n7cnlQQ==,iv:bd4OYDIvqcXbTXy8WrWubDahPdPMe6fmz4VhNDRAAOM=,tag:n2NndCpvm20lYAk97jUUwQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:X4440BGuCoeguW3DxIJXxsbs7ts=,iv:Rld3MEp5F8AQ1h2LwDDmBkTJrrjOeVliz1h8a2VK2to=,tag:Sh5jpMzeIsuapLIYHl7boQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:yf6eLk93b4i7kzQ=,iv:75YFSzrLNVubWdDbi0J9kzYFXiEvyErXEifVJCxX8xM=,tag:dEWdlQAK/RRSmaDwhvdDCg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:CVcee5/LH7jJx/Ep8Oz9,iv:o2fbXBs6vO/FTtmcK2ZrK7gpuvVM1rmmmWXGaGSdzXM=,tag:AiveGGH/rbgvXwvpJkhcAQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:WsHLSUhBPic853IZhP+8WaIhTAgkgUTVjg==,iv:Rjqg+O46WEq4SfBDc7+SmVN1K7kxZHL3x6afnujfbl4=,tag:rVltDHbxfOnSJ4gEfm1zbQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:bOXbBmAyCmODXxWNoRJUKDgvjjpCgfH3,iv:cH4LfXbI5RhUSjWmNCDdc1tJhgbo/7AIItIzONseDvI=,tag:+KXFS2vzN89FdeABlU54Hw==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:02wM2X/A4z9U+7M2Gcy7Vn7p,iv:LFs+Pyc88E2pvqM45+9Azydgq9L40OH0ivkoXeh98y4=,tag:+AEVl47uI5dnXz4+mOflzg==,type:str]
+#ENC[AES256_GCM,data:D/4m6HmvWBfEUE8NscQ=,iv:q2FXC/Jb9HOwruzbYiXMZ7c1pgrX/aOW8tiKem5LEAc=,tag:dX1fHFeuiKjTCRhMqB8EdA==,type:comment]
+PODNET: ENC[AES256_GCM,data:wg4TY7U69SU3laZdZA==,iv:israyajS6hHcukY6TAYpkiUPl5QWJa/cVZBaCTUSJds=,tag:2BYzswIbN7W2IbroaeHV0A==,type:str]
+SVCNET: ENC[AES256_GCM,data:DoU/xIilmBrQmnxBZw==,iv:rZ8eFMZ4IZx0HJNRAI2ykorAnw8To8rpQ47QKZCq+1k=,tag:c1cXaBvDjp3WRzRl0GKR6g==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDWW14MXpLMmJSZk9jRlIv
-            UiticHdPNlBYTjJZTmwyMHBGS0hKWS9oOWlNClA0QWhHelZveXdnT0RTVWxueDJJ
-            N295YVkwNHY4MkVFNnp6UFJhSUNxVVEKLS0tIEN3LzRtNG4xTGxGQ3Q4Yi91bm1P
-            aW85bEs3V1VhTzhCTEhYQUlhaEJDZE0Kk8n/NlWBCykqCjKIAp7hJ1rZFfW9RT9j
-            PW9Nb+V0HhUueojZXVn0Uaj9K9UJpOHcczsPNZEBwzqdoZQTmstRPw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGR0ZNZVdPdUNGVFlVVVdt
+            RmpQZEM0K1RVei8zTVkyaUZTYlI2NDVvcVI4CjlnWHFxcVhYL3JhY2RoWU9EYzVP
+            OERyZDY5d25rK3NWZ3Vqbm9OTHh1Y28KLS0tIEdBM1BtdkdpSzlPY29mN09iRlpm
+            UTNZeGVrRzdTSjRFZ3RmcFZYY3VHNGsKEyK+OzuoIV/Q9jCWfzwqdpXVmf1vkeCs
+            SsCxlYlvAXKIhDf2xuh1Q2uqghV347nPGH/b/hGdOHhw0H9UISvjtw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T13:49:30Z"
-    mac: ENC[AES256_GCM,data:6qVmxC5+qRfcDh/z9qOt2kvQPZbkbUzZB/ebFz/UF+bHCGoorHrNqKfenj1Izbw4GYDDh+ocETtPe6SozLdQuxGWdUfZPKILqgbkyKNWUcyXP+G5pgRjDg6dinGYk3mZ520d7baq9lyK+F0VOEA/JIBcTeAXw1HAj4kyD898OuQ=,iv:TJOLGyshn4MuOB461zza4mArxUfibrg2kbk6C/IC928=,tag:2QBmClcA4cPR+bcW4U7yuQ==,type:str]
+    lastmodified: "2025-01-09T14:10:41Z"
+    mac: ENC[AES256_GCM,data:jaCVh6GHkeZVuMBTLr0yUYHcIgAcIqVJElICWKkOahz6K4l9vC/QhqLRawYUKjZw65gkYEcgWuMhVd/FSUSMT85w1OVhk0GyrNYGWNwKC7UMIyHhxUwK/UVB6U3W/PikgV5Nkg7WB7rcT1J3u11DeaZpqLxSVoCVzSnqNdkEa2I=,iv:BuLDjmWyKAaqq6p0ewyIDOEMMF84wpfp8ksHl8Uaj0g=,tag:6GU9jPfGfMnFACm8m2Bzeg==,type:str]
     pgp: []
     version: 3.9.1
