--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:KxslwX+I24uDhFxRJ6rNBL4/IZOUWsyaZ8oZ4R/8VgqncVwqMYt9j3qw0jTejquvxmcN55jTmtOVK5QMDUwBPlQ=,iv:uKYRMHL6FV97zs83mCyqThRHe/D5JVqwte8zU4PBCaY=,tag:BMMGB/2i9K7lrhlWfVz5rw==,type:comment]
-    #ENC[AES256_GCM,data:FOs5UPsxvMQ912EB7dspkSOqkx7VkLeD9R5H3MrmarEY897G8iQvYod00bQ=,iv:KkA46J6j70JjUoTBsZmlauiG+sMwskB9WCzCX8ykX1U=,tag:B4iH29oBzueu/ztbj95YTg==,type:comment]
-    VIP: ENC[AES256_GCM,data:KJs1Mef615ri3vmoSQ==,iv:Ioy98lAeAUC8P8I8lu4otrhiUy16laLQOw4KevkUFdk=,tag:BGecckYSiP4powxUgMnpKg==,type:str]
-    #ENC[AES256_GCM,data:lJf0QUeWTKIQnIRMcSbKA0Pn2ipla1uwzn5A,iv:dG7ecYQZPiRW4GVv9W3o8arePVeKY0lVpmJ6X1AF6O0=,tag:v4H+C48fCPVGhZ4nkUW8Eg==,type:comment]
-    #ENC[AES256_GCM,data:EuCafOBXrw99Od2RM5xzq8VzbpJnIGE3YuppF6gZMS1hok9PvK4IvKYr1fQokbZf4ZeFwT3/256L34xWyHG/mUlKNKl5R0zonAxV7BppyTqvpot8/Z0SNgU=,iv:6633IBXxU52VWyHkg9RqSXyRNjWoK8vPfcgSwCdtvns=,tag:tAny8KlqXBdsG1msYbdEpw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:y/9hv6yvCvMI1WSBY4Q=,iv:Jqp2SWdkWEuCVYRq7e5EigFm6HkXLNy/9sLisNfDdWQ=,tag:LOCy502khe9dMHhCKRbHKw==,type:str]
-    #ENC[AES256_GCM,data:4J1l7ctjrEXOU1Zgn6u4JpMATTw1LBD804drh5Fn+HgTbw==,iv:zZMITSqu4hLVqnKSZ0SgUJdVhgdyijC7TMImpSHp6Do=,tag:7vylytCQlStxDVriu8BISQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:N74x4oHdl2xlCFHFNw==,iv:atboUA1LSN7GLBTMv+MfL8rZA5jifXbd9dssT9ASRYc=,tag:7T/nx620NJ6SX9u6yXfKxw==,type:str]
-    #ENC[AES256_GCM,data:sc0vSodriz6OlggZOAL2JiQc8SkksjbkPgSsvkiQ/tM5LUW5wvdDaZRziKLK4oU=,iv:/5Ik0pA8VTskLpidZIE4mFo8Xu7DC2X/UqsaidLloG8=,tag:j/Y7aVEkE4hcMcAqEGiUzA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:a1wE3gm4nSXkvVDuGy53oUEB93QzqORGUlNz8oGDvg==,iv:Xz6ZJoqp33l4QFPxeWQaJqKpvgnQr//PfRpfCDzOAxY=,tag:w84aWuoUYenkhQpFMX8nNg==,type:str]
-    #ENC[AES256_GCM,data:y3qwFlOzSpGwOGmHTouav90zw0b1K/7RpVG82QqZm1xKkAW8GGjXUXztMBZK7sVMZw9p3r8HqErLTHgO2qgGrRa7vUqNadWYrqI9HH8hOX9/mg==,iv:SMO0R8b6TeKRy58zy3y1+T4iGnvvJmylI8YK0fk4IuY=,tag:eXbpt+3Z5rm7E7sR3CxJ4w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:UHhXIWkaIhorvqQKyhgz,iv:+PO8mrdgTR9VBVkuHfPqXoI5hUepVbg03i6yo+xeAxU=,tag:bOkc8YDsJTO2in327fWD+A==,type:str]
-    #ENC[AES256_GCM,data:h+TjbmIOstzuA9A5pymSzhtWHMslBS1/mys3u/LiW0zs,iv:2z4Chl60h6rGTA7N6cI5TqY0tuQt1Q5oeFOYJOUHf8E=,tag:0omLgIQzi9Awe1xNjKJlRw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:k76L03OV2Br2xG3YiEqI,iv:TvN9IaXQcBpAf/LymHH7R1U5a4NBbOGd38pLuzciJPY=,tag:6fKbtbr3MFte2jORR5Q9LA==,type:str]
-    #ENC[AES256_GCM,data:RKc9J6TJFAX3emEczgf23BtoZd7EQQhn6mm2Qr0T83zyHld3e0Klg/SaGn0es7ZgNg7JzuEqlcNdoimPDR7BmDecu/sZgLhD+MGXTawx5JM=,iv:biM7Uz5SUECuBZrjggZBcozEE+PuQ86uqrsLndgh7MA=,tag:8A2daezNmWjJOHZkbxbyTw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:wgpQkWREUAjd5GTjboKt,iv:L+h516KIdvlAZFwb8xydq+Z8UCorpfvIL408rIzEy+g=,tag:0mopyIp3h7ddXBXGhousvA==,type:str]
-    #ENC[AES256_GCM,data:xLRf9nP51B1kHdl4JJSx89RlCIEAEUeK9KehA+eLly6hKAXhOEmWjqaQsX3sGSd6fey+Ornl9k4ndDobsNT2AU/IRL/Cl4pHD4WY0myH9ozebztE48ji,iv:QpUywx3+bz8yfo/e9xWOvEZz0s2p9wV2hFcGW9bhRYU=,tag:M+D1w1kEDoxUYXEBMbt5NA==,type:comment]
-    #ENC[AES256_GCM,data:tkO76BxiSgIK0Vf7YLv6mCdfRCSJ73vxXaL0GIc/+uKr7wSKXgGIm8AkCiGqxTd7cqclF1eeh0ugxGr2viA4Jfa68W1Hq5JcRUVbnfLgbB5zTS2ndMUmSg3OuvQrIuzVfywV5glu+agDqgkTKfEcLLE1ASTjQVigyFa46w==,iv:abF6WR0SmPUN/Rii/IHYVhC1nyW7jj2AeLqkJzt37Tw=,tag:y+hG0RQ7l1ryK5EUoZ9RnA==,type:comment]
-    #ENC[AES256_GCM,data:8Q5nfc/5MXEV/iIZc1Kr3FVOCDO1piMUbwYXXYNKwSWWrKTkwDM8zzQyHPvVpWt8AVkiWAQOMQf5k2Gc5QMi7hi27h6pmxBjA9HlZJUHDBE=,iv:gdobSQHvbKHPgMsHJVsNF7wTFEyGG9kVdTBgWqbk8xs=,tag:TftthE+g2EeR1mGY+jBHcA==,type:comment]
-    #ENC[AES256_GCM,data:+rPIUOlFFjIOLMUT7Ka70EAHiRpVPFx4Luskr7Oe8zFtxvvCX665B7NcMLt9Z8j7459NICmp,iv:66q25q8t8Z7jQ6yllB3HhHk8tdvu7PfKI2hEnlH1X+Q=,tag:lWt/X40oBfZYqsU6HYWtLQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:l6cbC4m3yp0+FwDY,iv:ivV7mfDptRt4LLkih3iM7KFjV+qGK1JQN2bep8n2S1Y=,tag:d95u0Xn0yMF7HIvSVaZ4qA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:jevMOS3hAcZCub7UWy8uxnY=,iv:e2pdNzVu0dVOXRZOP2FrqePJNvq4A9BPLd5V5O5crWY=,tag:nwnyN9iWib7x0NSzQBL7qA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:nHLxFJ475wCuobSLDW1NW6ZVcSYMVF8V088LaDpQFo0=,iv:855ACriniEH57r4qd2lstgBJWRCweMyBfTIRyqCfZA4=,tag:oHOWu8aJ2vDYaYR0mTdcUg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ROQcVaskLVE9ErrNRtvcujIJzIag7oObEErhj6TABsgMf1pMMbFONw==,iv:nX7mANOh0RvMrAzi639OEUC1ISPXK9YhfWtac7MBkVc=,tag:B8AwUBqtKxwaW3ChNhXKKQ==,type:str]
-    #ENC[AES256_GCM,data:EfttqowzNLkPfCY+4qruAeuDGkeWUL/JGzlATGhzsm8RnY1taI0XhaQkfjVr4oe+JUY8OLVZfFQ8JR27iDTtsg==,iv:WT2zrRT4L1tfA20p6lGxAAnc6HRxIZc2zkx2S40kBLg=,tag:K3fUO/0m+r7XOL09yTcsJA==,type:comment]
-    #ENC[AES256_GCM,data:seSsoaJMrbBW7NVftxNaUKdgTo9VllMvZ5yWz5srqcgW/mITB23BZ4UjaYz2jdIxpK7oLKvepYQ=,iv:C4HLAUJyu31OvaeGawhXpFtcc/JmVYPy5sI2+PCUL+s=,tag:28fndSQlKlnyfWlcKxQoPg==,type:comment]
-    #ENC[AES256_GCM,data:H8vtgfuZO1vg5/8s/GcHcDhE4nyY+dqCyg==,iv:hrtLhUQeXBUyLT6Emx1uv2eVHf1qnBmMYdQIqhFRF+0=,tag:p+8YXN28rlOLWnqSNXKu/g==,type:comment]
-    #ENC[AES256_GCM,data:fnw1jrBGFBOltWLmGVfjQkHEJJFh0co9OqXmiznecVf7Es88Ijm9zPvT4leLZ1E++bexrZKlARKzVksKetwhlcItTSY8e7uigNrRZNo=,iv:2edFF6vLBhI0y+ZEyHs1pwMf+pSatOSbb37uEia9ao0=,tag:N8R/hkopmE0PxM6Hne0Mow==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:MHaoKZ16I0FmjEJN+2VxCE0tmqh8H4yDphipGo6Jlyj4+fpENrFzC51SZh7BOF/0,iv:CTdzcObAplYP4PCIPxGIhtqCyU5m8tMTWQZ/mJcP4iA=,tag:G2Ei6tF8hvXPJ4B/oSzZ0A==,type:str]
-    #ENC[AES256_GCM,data:X7FJ2i7GpEW800P2JytvatgziogSEOhpAtN49Fopeiw5nQFuil0sgEziavPuck6AlUM8GrckrkUOINrdMxuYYavc1wv0tz8=,iv:D9JRx7oMsfmNB0J6OwZ6+/zjeelHG9KsF59DTd48F4s=,tag:c07gjp4PPVFuQ8HKcvjXyA==,type:comment]
-    #ENC[AES256_GCM,data:IlIc5GUjumsc0qJM9epJ9cMreZE1GsOIB5dC/gZ8HNHy+abZfM6+jukIGR6mMdq3/s1iUN1C,iv:lCWZRJyYNiWed//p3AjR3ms6mLVROI+IUKC0ksmS9rk=,tag:C38ra1VMBMfSFI/Cc7pTPQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:8Wx9V4Ds7Q==,iv:BCeDrOeBY+HjHskCifoPkmP9mHC99VzmAoQjlHFH1Ms=,tag:Jt3zH4Pref/VuevTgdU0eQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Mg4ySPO9tt23YkzR17lQ72opY5I=,iv:4GKGr90nWdwsIeLstNgiHBW+k80YklM30w2itpAVJP4=,tag:zSgF/OXi+D1Br8xjsUg5Dg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:t+AzZ5WnLszQYrI=,iv:4KLYmIcYzVANx0uEmWhYQZv+P22XBzPJSduB5+GdxSw=,tag:f2BxHA1hC8duUChRnxm6hw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:wgxN7l2gSHQlwCQQJvmU,iv:INPVxSmf6/p0GldmljqPoN2FD4300qziMqKG/Wkkm+I=,tag:iHDcZ3hthRY/m/MNeMrBrQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:JXa6VUjf5wCbu6/gZAEgT1O4PrH7ldCexA==,iv:vYPq1XyVMALLtrHq8z7zfqqIV3jKMGVtYRF7ZpSbrnw=,tag:RrLaI4QGAiUsdbrFiLubcg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2GP/4Tjxe9k5uCwGQOuUiuyO7Phzrp6E,iv:A+KlOSbcp5W+xKa5NyAdrmSBytJy8vqzt1uxlOEJZcw=,tag:Y3LYGjvvX+hbXNmmCGxhdA==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:7mqshm0MV2+l4oQ/KFlEF4FK,iv:3wqsx9exNzWFmwUdCKZ0VIUi+PJgKvx0XIkIHeQOUUI=,tag:fjemTAGfh7ND8z6ySllQmA==,type:str]
-    #ENC[AES256_GCM,data:6xPHxYdsQrsHJQKA0d0=,iv:myq16MdDx/D3cNxmyWzAH7T4NaHKRkdjnXJsHSR4vtY=,tag:UPak1XGKJ//y1bEva81EBQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:su0UJctxNm8TTgX1ow==,iv:5f9rHUG8wnZXgOmLGJdUayroywzG5b/+7B8M19hGCG0=,tag:3xkOn2NHVKXKHnFU4ivgzw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ff/clkBaWT5uflAotA==,iv:QIJIgm3t3WvNCplUaOhnKovLloTUO2egyYM10Vvgsa0=,tag:Zhd4JzmAIk26nXnaz3OTMQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:wVJ79Q==,iv:cTA5xyubVzOiSXwHCXLJJvI4UPZVx68rlOCKYcokRTo=,tag:Qq9GUfp4fK8CNIhEja7LNQ==,type:str]
+    #ENC[AES256_GCM,data:6J2esDlYC3zbbk3V7DgxeRhrjlAb0t5dgjPg0sUvmoyqAFH2L4eCgVzEZECG3U1whF7qUULu7Alb1+R5wkBoQkk=,iv:skfMIbbpb0rGk4SOjL1LAYbIBWA5L0udIhOYjfOfP2k=,tag:FZGeFBLQbbDAUeH0b0fEtA==,type:comment]
+    #ENC[AES256_GCM,data:uIm4ey6FBBHiioTY6izVmwD1kEQHHqqI1W4gEmHSLfBgjNoXY6vPrpJOTdc=,iv:E+LrEKVXaqco7LhYmz7OChA1Tsce1L82VCs+8eg88y0=,tag:u0JNKsxpbuC2twDtzz8TWg==,type:comment]
+    VIP: ENC[AES256_GCM,data:tgfT066Q+BvQnpFC2Q==,iv:+6W7ifLgNIoiywE1tj632HgirRX5SSaLFMlXypCOE7o=,tag:5xIlu9BMIotqj+eHLEs/7A==,type:str]
+    #ENC[AES256_GCM,data:HC//mZtT/xMYEqv3EVMD0pCKF15rL2AoJG93,iv:V8TdtLWcqEchsbHgk9thdO9qjYqqfZvssTo/6oktQx8=,tag:BBPQEZamj06krt4yzN9dcQ==,type:comment]
+    #ENC[AES256_GCM,data:uNRhtDdragqe0QvD64SZQZAn7+U+pHYmt4Z3sBf2s7IE7vNQTRuoBL38cF5Xwklr6o2c0S+Lj797OAOPo/VEKe2P43HbMEBoq0QJHdj13S8DbrwXV0NKLIY=,iv:yhT5eTLBIQV84S6u6yBCDX/6cGeMKc8z/d92PjneuYA=,tag:21oBo/x6PW16W7GChIgwKw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:StlzKg6cBT2VhuVAu5A=,iv:JEjMV8Kkilt6qr1lC0Vvrh4TFap+4p41KwUtekddrdA=,tag:584zDQesH2nTxGiz5uS3aA==,type:str]
+    #ENC[AES256_GCM,data:eoHEKK/ff1EofCUd/sspATNay6ILuH23XR+ZjkS6+Kuqfw==,iv:BE+DfD7FoaryivemlPFB8+73ULeSsj5TF+JFSdgTH04=,tag:vIOlp6VwjPn3zuNNjHUGhA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:xAEosCdtEaaHguEjEA==,iv:UOEXwhiPm1Mfr3m7wCuK4o63NN35QobLsCXy7bXh7bk=,tag:c21bCyZu+nKZBM7MPl6r6w==,type:str]
+    #ENC[AES256_GCM,data:JjBcmCKLk/Ek3lcfyjjQRnmIjwz7Bw3JHXTG5cBYMPoG06rMq4MEtoWHiI4KaRw=,iv:745tzZh2VeDUr3K6YwoHHNZvpt5PLcIpR5LBNjZcLnI=,tag:MmmaIna7gHVS3zufKi68xg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:S1k89EIrF9rzSrL381Y/GSab2tm0giBnKDRzt5tTug==,iv:VUGOYiIHdRflGEftZKXTcBt/0+MgjNcyae380rqtdWk=,tag:TR+ZUSm+goRDLUxBwfoFCw==,type:str]
+    #ENC[AES256_GCM,data:C9aXXAmZw47LDkrPTFluX6Psn9DctWxj19rpTlPOyKSldpdl0KzRPuyMWtodu90EpKm1nY71+LBEWRGTT/ass6qUOOa9z0OFATjeh7I+uif1Qg==,iv:uHHRdNvZVH2k/GpOnAHnpc/p52Cmw431QWgQhl+tFzE=,tag:P1MRTYhq/Ih91pzctPiY8w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:BqAGTTJdJWUADJOc57mZ,iv:nEkOEObqXSi15OaW7WSUeWGYoXVe9R7/6UGvZ8cc1Fo=,tag:FFaGultMlTVZSv3K67P9aQ==,type:str]
+    #ENC[AES256_GCM,data:oPiLNw1o0uIsBghiFH2B0bnmoqyjWUKwRDxcfuoChvKZ,iv:rReE5Hfmh/qStCNvxbNI0WqG/hh2StoeRLoIWcSSyOI=,tag:cu2po9exdLjSExTWeimR6g==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:BTiovaljZHiGfx054KjG,iv:7dabd6nfx+AEHeCzY2Ntfj8WMItA6DbOfBgXyqV+Zxc=,tag:zOkJLrB+wqx+PLazHtdsCg==,type:str]
+    #ENC[AES256_GCM,data:M5MJ9Z1GO75o+RBIDqEgsLsaqA+duTttI5PYfv52wd033VW0kzvqYIsFmwj8mE/0ThFChmyGO0pUslvs6XOY6IbfHrbCAW6345AjmRORAOI=,iv:vTGZCc9/zcpG3KSDWEo91i6dSUp8ffSfbGCHszVhQ1c=,tag:B3FlKcxnIe1C2oQ2nXkUKQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:InUWuWYtuFdtdaoKQbpU,iv:/fXqcpHj1RZrLf8Fam++hl5JO2v4Nnw2nHaP1sjxxTU=,tag:aQcuS1glnYFeGuGqwEPaNg==,type:str]
+    #ENC[AES256_GCM,data:YlFu3SxVogHk921vJEn08MirWociNvu84V7yaSaEyj43yfCZMt4O8g5nC1jKIDaAmjfUaeBY9GX5sSUSyxrtSHO3tA06vyeQYPYd3J7a+5Wctc+cDrAH,iv:UTzYqv+mN7e4BajG25zgzqebMPWv9RLoWPLSPMusM6Y=,tag:/CjMWMm8RG1hLLN04TrIjA==,type:comment]
+    #ENC[AES256_GCM,data:Fr4ZuACr4XOD6MpZdzhLdXyH7R2bwvEov0OkC+MKP8SCGXgnU6x0vIoN8bO6zql71ja4trxjuQl7eIBxwZhBdg5nO/N4uU3kL5gS+hwq3EEEabei3FcXTGATVzTfkg+2yV9wHtbFuf8uFqFu/DJPh02HnN24DLGocI+uDg==,iv:oLW+prfpnL0TE8yYX/GEnSxLRcW4m4pE35mBMcm0L3E=,tag:78MNVAIpGjZhIls0U5GtMg==,type:comment]
+    #ENC[AES256_GCM,data:GjUyGpwuMvHOezHGR5n6kHVBOp4pf4TNsmdaVKOyJqMjhdFHkxKw2ERnUZIUWpF+xc2ehxRNLcs7mFwcINCUVQmhAH/dwMbfRcoArQ7BJro=,iv:jNXFNUCkfEmX2+CTnFFFFDXkLpbnjZhDiiHde7DEGgs=,tag:CSnFsyBrzuaaqkKBnSQohg==,type:comment]
+    #ENC[AES256_GCM,data:qchEXMMkfDFS55SOGYfaTjHqFjPb42n7IO/21l1hFMKfNfoXJ6ruYNi6HVChsrrky9S5Dta1,iv:hEBSUJl0cvt+VaNQ4v92dlXW33iyATGHY1oa0X1RQjs=,tag:LNrLqGC9442KIFN4HoR7Kg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:hP1YLMzWztlHODUb,iv:nJTFU0WPEgbxoIek4cEqcelAVdVrzhb42g46ykMqAos=,tag:U7fXj6oy8OEwYpl6Mecjgg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:MxWRf0KWv43fhGJwBJ+kN8k=,iv:8WHdjqGtxxuYBrA79J1nXfPmnNWQxcwoznEhi7FcNh0=,tag:d3RztkbPUHovf5UVBgeUwg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:1z2IVI2O1k/1w7/n/7n/ILSnaiUQO5ANyDKRdS+LcXQ=,iv:wSEtg2y3fv1tIHM9sjoO2Y4UYwWWsBfplfLq5hSZQCw=,tag:VQnZ7JIfAU6aJhr512YtYQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:VHXgxm64JpeweupWFH53PDbvk58GO6lwtDdm8f/0QVzfQltemyhnQw==,iv:fzDDBYI8xAMNsQs8F6FDP+TbTQK8q/n56eVX+pD9Dz4=,tag:lVnPXIf7gNpHocHC6K7h6g==,type:str]
+    #ENC[AES256_GCM,data:vK0xOQgayeyTVbiqRAcMHnsJN6yahtb9LvnoakenJUv4BxzuxDRYfsCS8Fbnc588gOLTFJytiZtfspXDzShDNQ==,iv:Aq/mPApocRDOFmV2xeIYIlaCpy4X7c92h3dbMunhV14=,tag:H4sLwNN2Cqhh6wN+nXlmEw==,type:comment]
+    #ENC[AES256_GCM,data:OOc2RxyVL6wQsoKAkRwVBaTK2nMldVJW+8Fy4ezqwPsmny29J0fOaj065PBuGRn1+o0mC/9aN6U=,iv:3Sa/cTYmnjJTXL8jCw9CqJIi8qloggZeO9DQHJAkm+o=,tag:3xzayC6SCM7Z4Q3bl+kiBA==,type:comment]
+    #ENC[AES256_GCM,data:AvbzIdf0+e+NP9ztYWcVcmPpEEvFdq19fQ==,iv:4uelT4gl1p/IPpxGxXcDGcyZQF4SwXNcktoczOI3KOk=,tag:xzD6lod6S5GM8xA64c9Low==,type:comment]
+    #ENC[AES256_GCM,data:ZMPTyl63ewuSY5ZT4HRCUi21ZS5FLla2yb0gPSwNocGP/tAzzz5psn71fpnEXDYMU27k5rURMyGneUSQebiMW6MZ03G+ac506tyD4rY=,iv:e5bEgp1DlVO6hf4xJ1g7HOIB0tvR4PAoxwH7kxfsX04=,tag:aSR/CrGxKgsMWvq13KwUaw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:WSSyet+/jbZIdR4fPNC+PODDCPoSaL36QjZSoZ7B4viRyA1bDbVvJGIQM10p+WRB,iv:F+UqYJ5QHXPMp8wbVN8wwDLIRgiQhFwafuqcJBu4V4Q=,tag:Ti3CZfq4Un6MZZ0l6JK7FA==,type:str]
+    #ENC[AES256_GCM,data:0SYhR/1Qf7pupGkpCvsSSVVCy0jhBNRHCt+qrCBQorNMk1vrDYEUETI4n++O40j47DT/af+OxuP8JshPc0x1O8d/Ux6Ngdw=,iv:AI/zlpF7a9RXR+F5ewPdEULPpOe1khcIKFT2xWh4Bso=,tag:IHlvGrkH/eIy2p6mDmV2Qw==,type:comment]
+    #ENC[AES256_GCM,data:/vmIpp51iiztul6oh/YYUQ8/dHzuKRAFbsA7Kf7BK0F0Zo10X2wBhJdgzVOfjSDqKvfkC+tt,iv:JHwBU4fb5uQBxg/+NGBsKnZLfyjj7Jo4pEAdn2Z7cSQ=,tag:6uwuGfMWVssABZcFG1kefg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:p0ykYP234w==,iv:ZlGpBsScwbkd9jtDS8YhvDqK2nDHTiutgpAtsvbUY2c=,tag:YDkeDxtkg41eD3WQFJEFeA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:mJ+1n55V5QbttW4fvgTqArutoG0=,iv:1pxinN080eeQy2olUJIHzfbPK/lmY3sfjjIvVoYlVBE=,tag:wvrUNgrHxVH9p/WFQQwKEw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:Sc4XIg1MQ9xAvnc=,iv:UyyC6JsF/ZsgThLO5cbpFDQBCzdn5Rswwi00F0X4rXY=,tag:s68Lxy8gIwtQI+5IyiD3Ag==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:PQKc9a9UrKJxgsd/lo6J,iv:QjklYbv7EyXECQJ0xI7aCNexSzMXJ0p+hkAaQp8iX+k=,tag:bhrEcvn4ZNDc3CpDqenwuA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:xSGWVRxZxVFtoYUBKJc3T91SpfEN0mu7Rw==,iv:q9x0vyFqQiuuZvLwjvAnFd5LqoVUYriQRWECcTD0Ygo=,tag:S1oOWktVdbIEWDBgOPNZsg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:TWhtpbI/grkRcU2mkEqKix/T/D1vSedk,iv:iPajlzFNjLloPZG71/xGvwh9/atiAb+cQlOCqcGerng=,tag:K9u43/G3/d2hLsCEYZJ0Zg==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:R0F9ra7SiPKOMfqscXpy4SAQ,iv:Rv0QqUOjquzBfj0c20vayksRf0AFaj03/YEuAUCKi8g=,tag:QMJnFPo8Zr0CIH0oX2Pnnw==,type:str]
+    #ENC[AES256_GCM,data:hKn+NG3MzWH6FLiHWxc=,iv:y+sl5wUnsUZjvXsex8orDMkB7vq6oQnycPbe+pZgHOI=,tag:vlrXYJBvxf0w2LZjOpJ0mg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:OVVm9NQjgrF85dn76g==,iv:Kb2FTiFZNY5bguv+64ST2XCMCIVV5//x9Fvwqr0cgEo=,tag:w6XQF4wm5bMiDImR7gdohw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:4oTMQTUbzbOA+PcoZg==,iv:vlas1c3R2b+ZiBjfX/8JNTRWe4E4JosG3qhB6E4PS/c=,tag:InG/2EKoXQvXxCApFZMgIw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:RD+55A==,iv:LCigt/U4WODVNB/JxYWC9CWNVYsCGVo+qGCaH2C61Qg=,tag:jRc/HBVToiAuXPduw8rVog==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKbVdNZWFiS0JPOXg3M2dJ
-            dkcrSjZyc1EzTWJreGt2RUs4VHR5L2ZUQXkwCjgxYjRXU0JGVk1oUnBtaHNJY3ho
-            azlSaWtNVFFJNy9jdGFrTGVSby83TkEKLS0tIEF6NVc0M1hxMXVQSGVReGVxcVNW
-            Z09TWjdsaC8rYm5qRjBLNEUyTHhJM1UKJk+OMGhZaa89MDfE0QBUgbVak9ZqtW1x
-            bnhcODpwa7lr1DRIzeRuK+vNfJi4//eyMXDWglcJsgUm9gKqReDM0g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRXVJV3pJSkcvOVN4SzRL
+            U3QyS0xrcm1rSmpiUG8vNmlseXNGVFpFYVhZCks0cGVPV0JQalZvUUpNZVZHdWFN
+            TWxzUEFmV2d6ODNabDhYUzgrTUVDSHcKLS0tIFFOSzJzbjIvUk5JQXB5WlQ3YVRm
+            aEpUNCtKajk2VVN4WnIwSGFkMmVjQnMK9EtTFX9jX075P+mzWTBQfq08dxc+MS3E
+            K16XnlHBZidkqr0UNU10VETOHljtgRyCbRqWNzkZjRxsoRxXK+p1MQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T13:49:30Z"
-    mac: ENC[AES256_GCM,data:mQHdJv+TkCGAF5SS6EAuXgxFVz//AR6HevCcaF6cehCc85FLkEhk+8gifRzJZ0xTZhap/rUSIPrRFwtaSIZ8AXTR7v7p+PADdvRsrAUNhM9E899dlj/qrp/8kFUGiIVswezmPRw1OWA06MkoYFbtVh35y9GiaWmCs84XTV+BGO4=,iv:CdUsTppYWwo1vj9/g0cwUSmhlkMHl4YouUDLmNbU6BY=,tag:ppTrC77PTmAhlFRd2GYC1Q==,type:str]
+    lastmodified: "2025-01-09T14:10:41Z"
+    mac: ENC[AES256_GCM,data:/rKdS+/HcBmFp38fFVFbTD3Q/WlE5/6d/TR4fqj5gYu+o12aibnuSAI7wHYouqEmVgcqfGlGYPejWtReV2b4Zu7eSGMSepq9m2JSrt4F0D7FFvs2BF4hq5YMXMVtOyVQyMaje2cnTGSTD7QT1caP6feJ3S6ftgJjKyPSWHxsNcA=,iv:6UjiIvN5LjIG81UEhTQqAcXpViElxjl1RBrckkcRVTI=,tag:zUH47E4/ZdPtdOaOQXmlTg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
